fix css screensaver z-index

--- a/public/stories/style.css
+++ b/public/stories/style.css
@@ -854,6 +854,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
 .screensaver .slide {
   position: absolute;
